Item Picker - implemented "disabled" items

--- a/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ItemPicker/item-picker.html
@@ -8,7 +8,7 @@
         <umb-node-preview ng-repeat="item in vm.items"
                           icon="item.icon || vm.icon"
                           name="item.name"
-                          published="vm.published"
+                          published="!item.disabled"
                           description="item.description"
                           sortable="vm.sortable"
                           allow-remove="vm.allowRemove"
