--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
@@ -55,7 +55,7 @@
                     <p>Unable to find the editor for this configuration value.</p>
                 </umb-empty-state>
 
-                <umb-empty-state ng-if="vm.editor.fields.length === 0" position="center">
+                <umb-empty-state ng-if="!vm.editor.fields || vm.editor.fields.length === 0" position="center">
                     <p>There are no fields for this item.</p>
                 </umb-empty-state>
 
