--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
@@ -26,12 +26,38 @@
 
                 <div class="umb-package-details__main-content">
 
-                    <umb-box>
-                        <umb-box-header title="Take a break, you have reached contentment"></umb-box-header>
-                        <umb-box-content style="background-image: url(https://images.unsplash.com/photo-1465188035480-cf3a60801ea5?ixlib=rb-1.2.1&q=80&fm=jpg&crop=entropy&cs=tinysrgb&w=950);background-size: cover;background-position: bottom;min-height: 925px;">
-                            <div style="position: relative;top: 900px;text-align: right;">
-                                <a style="background-color:black;color:white;text-decoration:none;padding:4px 6px;font-family:-apple-system, BlinkMacSystemFont,'San Francisco', 'Helvetica Neue', Helvetica, Ubuntu, Roboto, Noto, 'Segoe UI', Arial, sans-serif;font-size:12px;font-weight:bold;line-height:1.2;display:inline-block;border-radius:3px" href="https://unsplash.com/@kalenemsley?utm_medium=referral&amp;utm_campaign=photographer-credit&amp;utm_content=creditBadge" target="_blank" rel="noopener noreferrer" title="Download free do whatever you want high-resolution photos from Kalen Emsley"><span style="display:inline-block;padding:2px 3px"><svg xmlns="http://www.w3.org/2000/svg" style="height:12px;width:auto;position:relative;vertical-align:middle;top:-2px;fill:white" viewBox="0 0 32 32"><title>unsplash-logo</title><path d="M10 9V0h12v9H10zm12 5h10v18H0V14h10v9h12v-9z"></path></svg></span><span style="display:inline-block;padding:2px 3px">Kalen Emsley</span></a>
+                    <div class="well well-large flex justify-between align-center items-center">
+                        <div>
+                            <h3>Do you want to stay up to date with Contentment?</h3>
+                            <p>Sign up for our newsletter about latest Contentment package releases and community news.</p>
+                        </div>
+                        <div style="min-width: 200px;margin-left: 30px;">
+                            <umb-button type="button"
+                                        label="Sign up"
+                                        button-style="primary"
+                                        size="xl"
+                                        icon="icon-fa fa-envelope mr2"
+                                        action="vm.subscribe()">
+                            </umb-button>
+                        </div>
+                    </div>
+
+                    <umb-box style="padding-bottom: 65px;">
+                        <umb-box-header title="Useful links"></umb-box-header>
+                        <umb-box-content>
+
+                            <div class="umb-node-preview" ng-repeat="link in vm.links">
+                                <div class="flex">
+                                    <i class="umb-node-preview__icon" ng-class="link.icon" aria-hidden="true"></i>
+                                    <div class="umb-node-preview__content">
+                                        <div class="umb-node-preview__name">
+                                            <a ng-href="{{link.url}}" ng-attr-target="_blank" ng-attr-rel="noopener" ng-bind="link.name"></a>
+                                        </div>
+                                        <div class="umb-node-preview__description" ng-bind="link.description"></div>
+                                    </div>
+                                </div>
                             </div>
+
                         </umb-box-content>
                     </umb-box>
 
@@ -57,25 +83,6 @@
                                 </a>
                             </div>
                             <img ng-if="vm.nggyu" ng-src="https://media.giphy.com/media/ZE5DmCqNMr3yDXq1Zu/source.gif" style="position:absolute;bottom:0;right:0;z-index:1;">
-                        </umb-box-content>
-                    </umb-box>
-
-                    <umb-box>
-                        <umb-box-header title="Useful links"></umb-box-header>
-                        <umb-box-content>
-
-                            <div class="umb-node-preview" ng-repeat="link in vm.links">
-                                <div class="flex">
-                                    <i class="umb-node-preview__icon" ng-class="link.icon" aria-hidden="true"></i>
-                                    <div class="umb-node-preview__content">
-                                        <div class="umb-node-preview__name">
-                                            <a ng-href="{{link.url}}" ng-attr-target="_blank" ng-attr-rel="noopener" ng-bind="link.name"></a>
-                                        </div>
-                                        <div class="umb-node-preview__description" ng-bind="link.description"></div>
-                                    </div>
-                                </div>
-                            </div>
-
                         </umb-box-content>
                     </umb-box>
 
@@ -127,12 +134,6 @@
                                     </span>
                                 </a>
                             </div>
-                        </umb-box-content>
-                    </umb-box>
-
-                    <umb-box>
-                        <umb-box-content class="text-center">
-                            <span>Copyright &copy; 2019 Lee Kelleher</span>
                         </umb-box-content>
                     </umb-box>
 
