Tree dashboard - removed unused class

--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
@@ -26,7 +26,7 @@
 
                 <div class="umb-package-details__main-content">
 
-                    <div class="well well-large flex justify-between align-center items-center">
+                    <div class="well well-large flex justify-between items-center">
                         <div>
                             <h3>Do you want to stay up to date with Contentment?</h3>
                             <p>Sign up for our newsletter about latest Contentment package releases and community news.</p>
