--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.html
@@ -23,7 +23,7 @@
             aria-label="Add"
             ng-click="vm.add()"
             ng-if="vm.allowAdd">
-        <localize key="general_add">Add</localize>
+        <localize key="{{vm.addButtonLabelKey}}">Add</localize>
         <span class="sr-only">...</span>
     </button>
 </div>
