--- a/src/Umbraco.Community.Contentment/DataEditors/RenderMacro/render-macro.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/RenderMacro/render-macro.html
@@ -9,7 +9,7 @@
     </div>
     <div ng-if="!vm.loading && !vm.html && !vm.error"><lee-was-here /></div>
     <div ng-bind-html="vm.html | safe_html" ng-if="vm.loading === false && vm.html"></div>
-    <div class="umb-contentpicker__min-max-help" ng-if="vm.loading === false && vm.error">
+    <div class="well umb-contentpicker__min-max-help" ng-if="vm.loading === false && vm.error">
         <h5 ng-bind="vm.error.title"></h5>
         <p ng-bind="vm.error.message"><p>
     </div>
