--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
@@ -3,65 +3,18 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="contentment lk-content-blocks" ng-controller="Umbraco.Community.Contentment.DataEditors.ContentBlocks.Controller as vm">
-    <div class="lk-content-blocks__container" ui-sortable="vm.sortableOptions" ng-model="model.value">
-        <div class="lk-content-blocks__block" ng-repeat="item in model.value">
-
-            <div tabindex="-1" class="lk-content-blocks__preview">
-                <div class="lk-content-blocks__preview--left" ng-if="vm.previews[item.key]">
-                    <i class="icon" ng-class="item.icon"></i>
-                    <span ng-bind="vm.populateName(item, $index)"></span>
-                </div>
-                <div class="lk-content-blocks__preview--main">
-                    <div class="lk-content-blocks__preview--default" ng-if="!vm.previews[item.key]">
-                        <i class="icon" ng-class="item.icon"></i>
-                        <h5 ng-bind="vm.populateName(item, $index)"></h5>
-                    </div>
-                    <div class="lk-content-blocks__preview--markup" ng-if="vm.previews[item.key]">
-                        <umb-load-indicator ng-show="vm.previews[item.key].loading" />
-                        <div ng-bind-html="vm.previews[item.key].markup | safe_html"></div>
-                    </div>
-                </div>
-                <button aria-label="Edit content"
-                        type="button"
-                        class="lk-content-blocks__edit"
-                        ng-click="vm.edit($index)"></button>
-            </div>
-
-            <ul class="lk-content-blocks__actions">
-                <li aria-label="Sort" class="lk-content-blocks__action--item umb-node-preview--sortable" ng-if="vm.sortable">
-                    <i class="icon icon-navigation"></i>
-                </li>
-                <li class="lk-content-blocks__action--item" ng-if="vm.allowRemove">
-                    <button aria-label="Delete content block" type="button" class="icon icon-trash" ng-click="vm.remove($index)"></button>
-                </li>
-                <li class="lk-content-blocks__action--item" ng-if="vm.blockActions[$index]">
-                    <umb-property-actions actions="vm.blockActions[$index]"></umb-property-actions>
-                </li>
-            </ul>
-
-        </div>
-    </div>
-    <button type="button"
-            class="umb-node-preview-add"
-            id="{{model.alias}}"
-            aria-label="Add content"
-            ng-click="vm.add()"
-            ng-if="vm.allowAdd">
-        <localize key="grid_addElement">Add content</localize>
-        <span class="sr-only">...</span>
-    </button>
-
+<div ng-controller="Umbraco.Community.Contentment.DataEditors.ContentBlocks.Controller as vm">
     <contentment-stack-editor add-button-label-key="'grid_addElement'"
-                             allow-add="vm.allowAdd"
-                             allow-edit="vm.allowEdit"
-                             allow-remove="vm.allowRemove"
-                             allow-sort="vm.allowSort"
-                             get-item-name="vm.populateName"
-                             on-add="vm.add"
-                             on-edit="vm.edit"
-                             on-remove="vm.remove"
-                             on-sort="vm.sort"
-                             property-actions="vm.propertyActions">
+                              allow-add="vm.allowAdd"
+                              allow-edit="vm.allowEdit"
+                              allow-remove="vm.allowRemove"
+                              allow-sort="vm.allowSort"
+                              get-item-name="vm.populateName"
+                              on-add="vm.add"
+                              on-edit="vm.edit"
+                              on-remove="vm.remove"
+                              on-sort="vm.sort"
+                              block-actions="vm.blockActions"
+                              property-actions="vm.propertyActions">
     </contentment-stack-editor>
 </div>
