--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
@@ -19,25 +19,22 @@
 
                 <umb-box ng-if="vm.items.length > 0">
                     <umb-box-content>
-                        <div class="form-search" ng-if="vm.enableFilter">
-                            <i class="icon-search"></i>
-                            <input type="text"
-                                   ng-model="vm.searchTerm"
-                                   class="umb-search-field search-query input-block-level -full-width-input"
-                                   localize="placeholder"
-                                   placeholder="@placeholders_filter"
-                                   umb-auto-focus
-                                   no-dirty-check />
-                        </div>
+                        <umb-search-filter ng-if="!vm.enableFilter"
+                                           input-id="contentment-config-search"
+                                           model="vm.searchTerm"
+                                           label-key="placeholders_filter"
+                                           umb-auto-focus="true">
+                        </umb-search-filter>
+
                         <ul class="umb-actions umb-actions-child">
                             <li class="umb-action" ng-repeat="item in vm.items | orderBy:vm.orderBy | filter:vm.searchTerm">
-                                <a class="umb-action-link" ng-click="vm.select(item)">
-                                    <i class="large icon" ng-class="item.icon"></i>
+                                <button type="button" class="btn-reset umb-action-link" ng-click="vm.select(item)">
+                                    <umb-icon icon="{{item.icon}}" class="large icon {{item.icon}}"></umb-icon>
                                     <span class="menu-label">
                                         <span ng-bind="item.name"></span>
                                         <small ng-bind="item.description"></small>
                                     </span>
-                                </a>
+                                </button>
                             </li>
                         </ul>
                     </umb-box-content>
