Fixed bug with list/stack editor components
When editing the raw JSON in "dev mode",
it didn't update the view-model in the component.
Refactored so that it now does.

Both components expect the `ng-model` attribute.

--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-list.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-list.html
@@ -4,7 +4,8 @@
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 <div ng-controller="Umbraco.Community.Contentment.DataEditors.ContentBlocks.Controller as vm">
-    <contentment-list-editor add-button-label-key="'grid_addElement'"
+    <contentment-list-editor ng-model="model.value"
+                             add-button-label-key="'grid_addElement'"
                              allow-add="vm.allowAdd"
                              allow-edit="vm.allowEdit"
                              allow-remove="vm.allowRemove"
