[WIP] ContentBlocks - even further work on docs
Also found and fixed a bug with previewing blocks.

--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.html
@@ -16,6 +16,7 @@
                               on-remove="vm.remove"
                               on-sort="vm.sort"
                               block-actions="vm.blockActions"
-                              property-actions="vm.propertyActions">
+                              property-actions="vm.propertyActions"
+                              previews="vm.previews">
     </contentment-stack-editor>
 </div>
