--- a/src/Umbraco.Community.Contentment/DataEditors/MacroPicker/macro-picker.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/MacroPicker/macro-picker.html
@@ -3,27 +3,17 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="umb-contentpicker" ng-controller="Umbraco.Community.Contentment.DataEditors.MacroPicker.Controller as vm">
-    <div ui-sortable="vm.sortableOptions" ng-model="model.value">
-        <umb-node-preview ng-repeat="item in model.value"
-                          icon="vm.icon"
-                          name="item.name"
-                          published="vm.published"
-                          description="item.alias"
-                          sortable="vm.sortable"
-                          allow-remove="vm.allowRemove"
-                          allow-edit="vm.allowEdit"
-                          on-remove="vm.remove($index)"
-                          on-edit="vm.edit($index)">
-        </umb-node-preview>
-    </div>
-    <button type="button"
-            class="umb-node-preview-add"
-            id="{{model.alias}}"
-            aria-label="Add"
-            ng-click="vm.add()"
-            ng-if="vm.allowAdd">
-        <localize key="{{vm.addButtonLabelKey}}">Add</localize>
-        <span class="sr-only">...</span>
-    </button>
+<div ng-controller="Umbraco.Community.Contentment.DataEditors.MacroPicker.Controller as vm">
+    <contentment-list-editor ng-model="model.value"
+                             add-button-label-key="vm.addButtonLabelKey"
+                             allow-add="vm.allowAdd"
+                             allow-edit="vm.allowEdit"
+                             allow-remove="vm.allowRemove"
+                             allow-sort="vm.allowSort"
+                             get-item-description="vm.populateDescription"
+                             default-icon="vm.defaultIcon"
+                             on-add="vm.add"
+                             on-edit="vm.edit"
+                             on-remove="vm.remove">
+    </contentment-list-editor>
 </div>
