--- a/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ConfigurationEditor/configuration-editor.overlay.html
@@ -31,13 +31,13 @@
                         </div>
                         <ul class="umb-actions umb-actions-child">
                             <li class="umb-action" ng-repeat="item in vm.items | orderBy:vm.orderBy | filter:vm.searchTerm">
-                                <a class="umb-action-link" ng-click="vm.select(item)">
+                                <button type="button" class="btn-reset umb-action-link" ng-click="vm.select(item)">
                                     <i class="large icon" ng-class="item.icon"></i>
                                     <span class="menu-label">
                                         <span ng-bind="item.name"></span>
                                         <small ng-bind="item.description"></small>
                                     </span>
-                                </a>
+                                </button>
                             </li>
                         </ul>
                     </umb-box-content>
