--- a/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.overlay.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/ContentBlocks/content-blocks.overlay.html
@@ -42,32 +42,32 @@
 
                     <ul class="umb-actions umb-actions-child" ng-show="vm.selectBlueprint === false">
                         <li class="umb-action" ng-repeat="item in vm.items | filter:vm.searchTerm">
-                            <a class="umb-action-link" ng-click="vm.select(item)">
+                            <button type="button" class="btn-reset umb-action-link" ng-click="vm.select(item)">
                                 <i class="large icon" ng-class="item.icon"></i>
                                 <span class="menu-label">
                                     <span ng-bind="item.name"></span>
                                     <small ng-bind="item.description"></small>
                                 </span>
-                            </a>
+                            </button>
                         </li>
                     </ul>
 
                     <ul class="umb-actions umb-actions-child" ng-show="vm.selectBlueprint === true">
                         <li class="umb-action" ng-repeat="blueprint in vm.selectedElementType.blueprints | orderBy:vm.orderBy | filter:vm.searchTerm">
-                            <a class="umb-action-link" ng-click="vm.create(vm.selectedElementType, blueprint)">
+                            <button type="button" class="btn-reset umb-action-link" ng-click="vm.create(vm.selectedElementType, blueprint)">
                                 <i class="large icon" ng-class="vm.selectedElementType.icon"></i>
                                 <span class="menu-label">
                                     <span ng-bind="blueprint.name"></span>
                                 </span>
-                            </a>
+                            </button>
                         </li>
                         <li class="umb-action sep" ng-show="vm.blueprintAllowBlank">
-                            <a class="umb-action-link" ng-click="vm.create(vm.selectedElementType)">
+                            <button type="button" class="btn-reset umb-action-link" ng-click="vm.create(vm.selectedElementType)">
                                 <i class="large icon" ng-class="vm.selectedElementType.icon"></i>
                                 <span class="menu-label">
                                     <span><localize key="blueprints_blankBlueprint">Blank</localize></span>
                                 </span>
-                            </a>
+                            </button>
                         </li>
                     </ul>
 
@@ -77,7 +77,12 @@
             <umb-box ng-if="vm.selectBlueprint === false && vm.clipboardItems.length > 0">
                 <umb-box-header title-key="content_createFromClipboard">
                     <div style="position:relative;cursor:pointer;" title="Clear clipboard">
-                        <i class="icon-trash" ng-click="vm.showPrompt()"></i>
+                        <button type="button" class="btn-reset" ng-click="vm.showPrompt()">
+                            <i class="icon-trash"></i>
+                            <span class="sr-only">
+                                <localize key="actions_delete">Delete</localize>
+                            </span>
+                        </button>
                         <umb-confirm-action ng-if="vm.prompt"
                                             direction="left"
                                             on-confirm="vm.clearClipboard()"
@@ -88,12 +93,12 @@
                 <umb-box-content>
                     <ul class="umb-actions umb-actions-child">
                         <li class="umb-action" ng-repeat="item in vm.clipboardItems | orderBy:vm.orderBy | filter:vm.searchTerm">
-                            <a class="umb-action-link" ng-click="vm.paste(item)">
+                            <button class="btn-reset umb-action-link" ng-click="vm.paste(item)">
                                 <i class="large icon" ng-class="item.icon"></i>
                                 <span class="menu-label">
                                     <span ng-bind="item.name"></span>
                                 </span>
-                            </a>
+                            </button>
                         </li>
                     </ul>
                 </umb-box-content>
