TextInput - removed prepend/append markup
This was an experimental feature that wasn't fully fleshed out.

--- a/src/Umbraco.Community.Contentment/DataEditors/TextInput/text-input.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/TextInput/text-input.html
@@ -9,10 +9,7 @@
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 <div class="contentment" ng-class="vm.uniqueId" ng-controller="Umbraco.Community.Contentment.DataEditors.TextInput.Controller as vm">
-    <div class="text-input" ng-class="{ 'input-prepend': vm.prepend, 'input-append': vm.append }">
-        <span class="add-on" ng-if="vm.prepend">
-            <i class="icon" ng-class="vm.prepend"></i>
-        </span>
+    <div class="text-input">
         <input ng-model="model.value"
                ng-trim="false"
                id="{{model.alias}}"
@@ -21,9 +18,6 @@
                list="{{vm.dataListId}}"
                autocomplete="{{vm.autoComplete}}"
                placeholder="{{vm.placeholderText}}" />
-        <span class="add-on" ng-if="vm.append">
-            <i class="icon" ng-class="vm.append"></i>
-        </span>
     </div>
     <div class="help" ng-if="model.value.length >= vm.maxCharsThreshold && model.value.length <= vm.maxChars">
         <p tabindex="0">
