TextInput - added option to enable "spellcheck" attribute

--- a/src/Umbraco.Community.Contentment/DataEditors/TextInput/text-input.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/TextInput/text-input.html
@@ -17,6 +17,7 @@
                type="text"
                list="{{vm.dataListId}}"
                autocomplete="{{vm.autoComplete}}"
+               spellcheck="{{vm.spellCheck}}"
                placeholder="{{vm.placeholderText}}" />
     </div>
     <div class="help" ng-if="model.value.length >= vm.maxCharsThreshold && model.value.length <= vm.maxChars">
