Notes - enhanced to enable AngularJS directives/interpolation
+ some subtle CSS improvements

--- a/src/Umbraco.Community.Contentment/DataEditors/Notes/notes.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/Notes/notes.html
@@ -4,5 +4,5 @@
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
 <div class="umb-readonlyvalue">
-    <div ng-bind-html="model.config.notes | safe_html"></div>
+    <div lk-bind-html-template="model.config.notes"></div>
 </div>
