[WIP] Number Input
Having good fun with this one so far.

I am interested in how the min/max/step UI could be improved upon.

--- a/src/Umbraco.Community.Contentment/DataEditors/NumberInput/number-input.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/NumberInput/number-input.html
@@ -3,10 +3,16 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div>
+<div class="contentment number-input" ng-class="vm.uniqueId" ng-controller="Umbraco.Community.Contentment.DataEditors.NumberInput.Controller as vm">
     <input type="number"
-           class="umb-property-editor-tiny umb-number"
+           class="umb-number"
+           fix-number
            id="{{model.alias}}"
+           max="{{vm.maximum}}"
+           min="{{vm.minimum}}"
+           ng-class="vm.sizeClass"
            ng-model="model.value"
-           fix-number />
+           pattern="{{vm.pattern}}"
+           placeholder="{{vm.placeholderText}}"
+           step="{{vm.step}}" />
 </div>
