Further tweaks to the Contentment dashboard
with the YouTube links.

--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
@@ -41,12 +41,9 @@
 
                     <umb-box>
                         <umb-box-header title="Video demonstrations, guides and tutorials about Contentment on YouTube.">
-                            <umb-button button-style="link"
-                                        href="https://www.youtube.com/playlist?list=PL8grlRt7-8oVULPYJpqido5QItRsJBt3M"
-                                        icon="icon-fa fa-youtube large color-red mr2"
-                                        size="m"
-                                        type="button">
-                            </umb-button>
+                            <a href="https://www.youtube.com/playlist?list=PL8grlRt7-8oVULPYJpqido5QItRsJBt3M" target="_blank" rel="noopener">
+                                <i class="icon medium icon-fa fa-youtube mr0" aria-hidden="true"></i>
+                            </a>
                         </umb-box-header>
                         <umb-box-content>
                             <!-- Inspiration taken from https://css-tricks.com/lazy-load-embedded-youtube-videos/ -->
@@ -60,7 +57,6 @@
                                     allowfullscreen
                                     title="Contentment for Umbraco videos">
                             </iframe>
-                            <p><a href="https://www.youtube.com/playlist?list=PL8grlRt7-8oVULPYJpqido5QItRsJBt3M" target="_blank" rel="noopener">A series of lo-fi videos are available on YouTube.</a></p>
                         </umb-box-content>
                     </umb-box>
 
