--- a/src/Umbraco.Community.Contentment/DataEditors/DropdownList/dropdown-list.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/DropdownList/dropdown-list.html
@@ -8,6 +8,7 @@
             class="umb-dropdown"
             lk-html-attributes="vm.htmlAttributes"
             ng-model="model.value"
+            ng-change="vm.change()"
             ng-options="item.value as item.name disable when item.disabled for item in vm.items">
         <option ng-if="vm.allowEmpty" value=""></option>
     </select>
