Correct self-closing directives
Fixes #66

--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
@@ -15,7 +15,7 @@
                         <div class="umb-panel-header-name" ng-bind="vm.title"></div>
                         <div class="umb-panel-header-locked-description" ng-bind="vm.version"></div>
                     </div>
-                    <div style="padding: 0 20px"><lee-was-here /></div>
+                    <div style="padding: 0 20px"><lee-was-here></lee-was-here></div>
                 </div>
             </div>
         </div>
