--- a/src/Umbraco.Community.Contentment/DataEditors/TemplatedList/templated-list.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/TemplatedList/templated-list.html
@@ -3,7 +3,7 @@
    - License, v. 2.0. If a copy of the MPL was not distributed with this
    - file, You can obtain one at https://mozilla.org/MPL/2.0/. -->
 
-<div class="contentment" ng-class="vm.uniqueId" ng-controller="Umbraco.Community.Contentment.DataEditors.TemplatedList.Controller as vm">
+<div class="contentment templated-list" ng-class="vm.uniqueId" ng-controller="Umbraco.Community.Contentment.DataEditors.TemplatedList.Controller as vm">
     <div class="btn-group-vertical" lk-html-attributes="vm.htmlAttributes">
         <button type="button"
                 class="btn btn-reset"
