Adds telemetry for DataTypes
When a DataType is saved, a request is sent to my web-server with
minimal data about the property-editor used.

Further information and analysis is available at:
https://leekelleher.com/umbraco/contentment/telemetry/

--- a/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
+++ b/src/Umbraco.Community.Contentment/Web/UI/App_Plugins/Contentment/backoffice/contentment/index.html
@@ -88,18 +88,42 @@
                     <umb-box>
                         <umb-box-header title="Feature options"></umb-box-header>
                         <umb-box-content>
-                            <h5 class="mt0">Tree dashboard</h5>
-                            <p>If you would like to remove this page and tree item from the Settings section, you can use the following code snippet to do so.</p>
-                            <div class="umb-readonlyvalue">
-                                <details class="well well-small">
-                                    <summary><strong>Code snippet to disable Contentment tree dashboard</strong></summary>
-                                    <div class="mt3">
-                                        <p>Copy the C# class below. You can either save this to your <code>~/App_Code/</code> folder, or add it to your own code library.</p>
-                                    </div>
-                                    <umb-code-snippet language="vm.csharp">{{vm.disableTreeCode}}</umb-code-snippet>
-                                    <p>If you are already using a composer class, you can add the <code>composition.DisableContentmentTree();</code> line to it.</p>
-                                </details>
+
+                            <div>
+                                <h5 class="mt0">Tree dashboard</h5>
+                                <p>If you would like to remove this page and tree item from the Settings section, you can use the following code snippet to do so.</p>
+                                <div class="umb-readonlyvalue">
+                                    <details class="well well-small">
+                                        <summary><strong>Code snippet to disable Contentment tree dashboard</strong></summary>
+                                        <div class="mt3">
+                                            <p>Copy the C# class below. You can either save this to your <code>~/App_Code/</code> folder, or add it to your own code library.</p>
+                                        </div>
+                                        <umb-code-snippet language="vm.csharp">{{vm.disableTreeCode}}</umb-code-snippet>
+                                        <p>If you are already using a composer class, you can add the <code>composition.DisableContentmentTree();</code> line to it.</p>
+                                    </details>
+                                </div>
                             </div>
+
+                            <div ng-if="vm.telemetryEnabled === true">
+                                <h5>Telemetry</h5>
+                                <p>By default, the package sends telemetry data about which property-editors are being used (from Contentment only). For more details about the data being captured and transparency on the analysis, please visit <a href="https://leekelleher.com/umbraco/contentment/telemetry/" target="_blank" rel="noopener"><strong>leekelleher.com/umbraco/contentment/telemetry</strong></a>.</p>
+                                <p>If you would prefer to opt-out and disable the telemetry feature, you can use the following code snippet to do so.</p>
+                                <div class="umb-readonlyvalue">
+                                    <details class="well well-small">
+                                        <summary><strong>Code snippet to disable Contentment telemetry</strong></summary>
+                                        <div class="mt3">
+                                            <p>Copy the C# class below. You can either save this to your <code>~/App_Code/</code> folder, or add it to your own code library.</p>
+                                        </div>
+                                        <umb-code-snippet language="vm.csharp">{{vm.disableTelemetryCode}}</umb-code-snippet>
+                                        <p>If you are already using a composer class, you can add the <code>composition.DisableContentmentTelemetry();</code> line to it.</p>
+                                    </details>
+                                </div>
+                            </div>
+                            <div ng-if="vm.telemetryEnabled === false">
+                                <h5>Telemetry</h5>
+                                <p><em>The telemetry feature has been disabled.</em></p>
+                            </div>
+
                         </umb-box-content>
                     </umb-box>
 
