DropdownList - hides extra empty option
AngularJS automatically adds an empty option to the top of the
options, until the `model.value` is selected. If the "allowEmpty" field
is enabled, this update will automatically set the `model.value` to be
the first item value.

--- a/src/Umbraco.Community.Contentment/DataEditors/DropdownList/dropdown-list.html
+++ b/src/Umbraco.Community.Contentment/DataEditors/DropdownList/dropdown-list.html
@@ -10,6 +10,6 @@
             ng-model="model.value"
             ng-change="vm.change()"
             ng-options="item.value as item.name disable when item.disabled for item in vm.items">
-        <option ng-if="vm.allowEmpty" value=""></option>
+        <option ng-if="vm.showEmpty" value=""></option>
     </select>
 </div>
